--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "This is a Leaning React JavaScript",
   "scripts": {
-    "start":"parcel index.html",
+    "start": "parcel index.html",
     "build": "parcel build index.html",
     "test": "jest "
   },
@@ -17,15 +17,16 @@
     "url": "https://github.com/Ayushaggarwal05/React-Learning/issues"
   },
   "homepage": "https://github.com/Ayushaggarwal05/React-Learning#readme",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
+  },
   "devDependencies": {
     "parcel": "^2.13.3",
     "process": "^0.11.10"
   },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
   "browserslist": [
     "last 3 versions"
   ]
-}  
+}
