--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/Ayushaggarwal05/React-Learning#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.1",
     "@tailwindcss/postcss": "^4.1.4",
     "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^4.1.4"
   },
